<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/custom_edittext">>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rejestracja"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorBlue"/>

            <!-- Nazwa użytkownika -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editTextUsername"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Nazwa użytkownika"
                android:drawableLeft="@drawable/ic_badge_24"
                android:drawablePadding="8dp"
                android:inputType="none"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"/>

            <!-- Email -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:textColorHint="@android:color/darker_gray"/>

            <!-- Hasło -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editTextPassword"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Hasło"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"/>

            <!-- Potwierdzenie hasła -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editTextConfirmPassword"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Potwierdź Hasło"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/textViewPasswordConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text=""
                android:textColor="@android:color/holo_green_dark"
                android:textAlignment="center"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewMainMedication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="6dp"
                    android:text="Wybierz lek którego używasz:"
                    android:textColor="@color/colorBlue"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerMainMedication"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/custom_edittext"
                    android:entries="@array/main_medication_array"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>


            <!-- Przycisk Anuluj -->
            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cornerRadius = "20dp"
                android:backgroundTint="@color/colorBlue"
                android:text="Anuluj" />

            <!-- Przycisk Rejestracji -->
            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cornerRadius = "20dp"
                android:backgroundTint="@color/colorBlue"
                android:text="Zarejestruj" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>


