...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background">

    <FrameLayout
        android:id="@+id/login_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



    <androidx.cardview.widget.CardView
...
                android:padding="8dp"
                android:text="Nie pamiętam hasła"
                android:textColor="@color/colorBlue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
...
